# dealme

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml
docs/sphinx/: .gitignore  justfile
docs/sphinx/source/: about.md  conf.py  index.rst
src/dealme/: __init__.py  api.py  dealme.py
tests/: test_deck.py
