[project]
name = "dealme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Curtis Brinker", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest[dev]>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
